--- a/AIPTW_confounders_dropped.ipynb
+++ b/AIPTW_confounders_dropped.ipynb
@@ -68,8 +68,8 @@
    "source": [
     "basic_merged = merged.copy()  # To allow for re-running \n",
     "\n",
-    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25]  # Can be changed later, but for now useful I think\n",
-    "\n",
+    "#Subsetting for age <= 25\n",
+    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25] \n",
     "# Dropping states who were treated < 97 (i.e. they always had programs)\n",
     "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]  \n",
     "\n",
@@ -187,6 +187,8 @@
     "    A: vector of which group each person belongs to\n",
     "    n_splits: how much we split for the k-folding\n",
     "    year_of_interest: what group we are estimating at this point. \n",
+    "\n",
+    "    Outputs: vector containing estimates of g\n",
     "    \"\"\"\n",
     "    # k-folding\n",
     "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
