--- a/IPW_estimator.ipynb
+++ b/IPW_estimator.ipynb
@@ -68,16 +68,12 @@
    "source": [
     "basic_merged = merged.copy()  # To allow for re-running \n",
     "\n",
-    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25]  # Can be changed later, but for now useful I think\n",
-    "#age_subset = np.logical_and(np.greater_equal(basic_merged[\"a_age\"],18), np.greater_equal(19,basic_merged[\"a_age\"]))\n",
-    "# 17 <= age <= 21 (maybe should be like 22)\n",
-    "#basic_merged = basic_merged[age_subset]\n",
-    "#print(basic_merged.shape)\n",
+    "# Subsetting for age <= 25\n",
+    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25]  \n",
     "\n",
     "# Dropping states who were treated < 97 (i.e. they always had programs)\n",
     "# This is following Callaway + Sant'anna, as we cannot meaningfully \n",
-    "# do any inference using those states. Although we can compare them later as a \n",
-    "# robustness check, which may be interesting\n",
+    "# do any inference using those states\n",
     "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]  \n",
     "\n",
     "# Setting never implemented states to implementing at t=inf\n",
@@ -194,6 +190,9 @@
     "    A: vector of which group each person belongs to\n",
     "    n_splits: how much we split for the k-folding\n",
     "    year_of_interest: what group we are estimating at this point. \n",
+    "\n",
+    "    Outputs: \n",
+    "    predictions for g\n",
     "    \"\"\"\n",
     "\n",
     "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
