--- a/Q_estimator.ipynb
+++ b/Q_estimator.ipynb
@@ -68,16 +68,13 @@
    "source": [
     "basic_merged = merged.copy()  # To allow for re-running \n",
     "\n",
-    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25]  # Can be changed later, but for now useful I think\n",
-    "#age_subset = np.logical_and(np.greater_equal(basic_merged[\"a_age\"],18), np.greater_equal(19,basic_merged[\"a_age\"]))\n",
-    "# 17 <= age <= 21 (maybe should be like 22)\n",
-    "#basic_merged = basic_merged[age_subset]\n",
-    "#print(basic_merged.shape)\n",
+    "# Subsetting for age <= 25\n",
+    "basic_merged = basic_merged[basic_merged[\"a_age\"] <= 25] \n",
+    "\n",
     "\n",
     "# Dropping states who were treated < 97 (i.e. they always had programs)\n",
     "# This is following Callaway + Sant'anna, as we cannot meaningfully \n",
-    "# do any inference using those states. Although we can compare them later as a \n",
-    "# robustness check, which may be interesting\n",
+    "# do any inference using those states.\n",
     "basic_merged = basic_merged[basic_merged[\"Year_Implemented\"].str.contains(\"always\")==False]  \n",
     "\n",
     "# Setting never implemented states to implementing at t=inf\n",
@@ -185,7 +182,18 @@
     "    return predictions_matrix, year_vec, treat_vec\n",
     "\n",
     "def treatment_k_fold_fit_and_predict(make_model, X:pd.DataFrame, A:np.array, n_splits:int, year_of_interest:int):\n",
-    "    # k-folding\n",
+    "    \"\"\"\n",
+    "    k-fold predicting A given X\n",
+    "\n",
+    "    Inputs: \n",
+    "    make_model: G_model of interest\n",
+    "    X: Dataframe (always basic_merged)\n",
+    "    A: vector of which group each person belongs to\n",
+    "    n_splits: how much we split for the k-folding\n",
+    "    year_of_interest: what group we are estimating at this point. \n",
+    "\n",
+    "    Outputs: vector containing estimates of g\n",
+    "    \"\"\"\n",
     "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
     "\n",
     "    # group of people \n",
@@ -236,31 +244,13 @@
     "\n",
     "    Based on Callaway & Sant'anna, we compute ATT(g,t) over time\n",
     "\n",
-    "    We say that ATT(g,t) is the ATT for group g at time `t`\n",
-    "    We compare the outcomes at time `t` to a base date, which we refer to as g_d_1\n",
-    "    \n",
-    "    If time `t` occurs >= treatment_year (i.e. when treatment first occurs), then g_d_1 = treatment_year - 1\n",
-    "    Otherwise, we say that g_d_1 = t - 1\n",
-    "\n",
-    "    For intuition, if t >= treatment_year, we are looking at the DiD comparing outcomes at time `t` to \n",
-    "    those which were immediately before treatment. If t < treatment_year, then we are performing a robustness check.\n",
-    "    That robustness check involves pretending that treatment occured at time t, and comparing it to the previous period's outcomes. \n",
-    "\n",
-    "    For each g,t of interest, we compute:\n",
-    "\n",
-    "    ATT(g,t) = E(G_g/E(G_g) * (m_treat_1(X) - m_treat_0(X) - (m_nev_1(X) - m_nev_0(X))))\n",
-    "\n",
-    "    m_treat_i(X) = prediction for the outcome for an individual with covariates `X` in year `t` who recieved treatment = `i`\n",
-    "    m_nev_i(X)   = prediction for the outcome for an individual with covariates `X` in year `g_d_1` who recieved treatment = `i`\n",
-    "\n",
-    "    We also compute standard errors, and return the ATT(g,t) + standard errors as two different lists. \n",
-    "\n",
-    "    stfips: the FIPS codes for the states of interest\n",
+    "    Inputs: \n",
     "    year_of_interest: the year at which treatment first occurs\n",
     "    response: which outcome we are interested in, out of public/private/all insurance. \n",
     "    confounder_list: list of columns of dataframe to use as confounders\n",
     "    dataframe: dataframe to get data from\n",
-    "    model: machine learning ensemble model to use as the Q model\n",
+    "    Q_model: machine learning ensemble model to use as the Q model\n",
+    "    G_model:  machine learning ensemble model to use as the g model (not used here)\n",
     "    '''\n",
     "    # We don't subset here, as we want to fit on all data. \n",
     "    #state_level = dataframe.loc[dataframe['stfips'].isin(stfips),:] # Subset for states of interest\n",
@@ -452,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
